--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie</title>
-    <meta name="description" content="Avalie seus filmes aqui e receba recomendações parecidas"
+    <meta name="description" content="Avalie seus filmes aqui e receba recomendações parecidas">
 <body>
     
 </body>
