--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie</title>
-    <meta name="description" content="Avalie seus filmes aqui e receba recomendações parecidas">
+    <meta name="description" content="Avalie seus filmes aqui e receba recomendacoes parecidas">
 
 </head>
 
 <body>
  <header>
-
+    <h1> Avalie seus filmes favoritos aqui </h1>
+    <p> Temos disponiveis em nosso site filmes e series para voce avaliar, </p>
 
 </header>
 
