--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
  <header>
     <h1> Avalie seus filmes favoritos aqui </h1>
-    <p> Temos disponiveis em nosso site filmes e series para voce avaliar, </p>
+    <p> Temos disponiveis em nosso site filmes e series para voce avaliar, e você também pode escolher um filme para assistir aqui no nosso site. </p>
+<img src="/imgcinema/deadpool.jpeg" alt= "Assista ou avalie aqui"
+height="270"
+
+
 
 </header>
 
