--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 
 <body>
  <header>
-    <h1> Avalie seus filmes favoritos aqui </h1>
-    <p> Temos disponiveis em nosso site filmes e series para voce avaliar, e você também pode escolher um filme para assistir aqui no nosso site. </p>
-<img src="/imgcinema/deadpool.jpeg" alt= "Assista ou avalie aqui" height="270" loading="eager">
-<h2 class=""></h2>
 
+    <nav> 
+        <ul>
+            <li><a href="#"> Início </a></li>
+            <li><a href="#"> Categoria de Filmes </a></li>
 </header>
 
 
 <main>
-
+    <h1> Avalie seus filmes favoritos aqui </h1>
+    <p> Temos disponiveis em nosso site filmes e series para voce avaliar, e você também pode escolher um filme para assistir aqui no nosso site. </p>
+<img src="/imgcinema/deadpool.jpeg" alt= "Assista ou avalie aqui" height="270" loading="eager">
+<h2 class=""></h2>
 
 </main>
 <footer>
