--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul>
             <li><a href="#"> Início </a></li>
             <li><a href="#"> Categoria de Filmes </a></li>
+            <li><a href="#"> Categoria de Séries </a></li>
 </header>
 
 
