--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav> 
         <ul>
             <li><a href="#"> Início </a></li>
-            <li><a href="./categoria de filmes.html"> Categoria de Filmes </a></li>
-            <li><a href="./categoria de series.html"> Categoria de Séries </a></li>
+            <li><a href="./categoria-de-filmes.html"> Categoria de Filmes </a></li>
+            <li><a href="./categoria-de-series.html"> Categoria de Séries </a></li>
 </header>
 
 
