--- a/Grupo-da-Persin-main/Grupo-da-Persin-main/index.html
+++ b/Grupo-da-Persin-main/Grupo-da-Persin-main/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie</title>
     <meta name="description" content="Avalie seus filmes aqui e receba recomendacoes parecidas">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css"
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 <main>
     <h1> Avalie seus filmes favoritos aqui </h1>
     <p> Temos disponiveis em nosso site filmes e series para voce avaliar, e você também pode escolher um filme para assistir aqui no nosso site. </p>
-    <h2> Lançamentos</h2>
+    <h2>Lançamentos</h2>
     <img src="/imgcinema/deadpool.jpeg" alt= "Assista ou avalie aqui" height="270" loading="eager">
 <h2 class=""></h2>
 
