--- a/Grupo-da-Persin-main/Grupo-da-Persin-main/categoria-de-series.html
+++ b/Grupo-da-Persin-main/Grupo-da-Persin-main/categoria-de-series.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Séries</title>
+    <link rel="stylesheet" href="./css/series.css">
 </head>
 <body>
-    
+    <h1 id="titulo">Comédia</h1>
+    <img src="/imgcinema/MV5BNzVkYWY4NzYtMWFlZi00YzkwLThhZDItZjcxYTU4ZTMzMDZmXkEyXkFqcGdeQXVyODUxOTU0OTg@._V1_.jpg" height="270" loading="eager">
+    <img src="/imgcinema/odeiaochri.jpg" height="270" loading="eager">
 </body>
 </html>
