--- a/Grupo-da-Persin-main/index.html
+++ b/Grupo-da-Persin-main/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie</title>
     <meta name="description" content="Avalie seus filmes aqui e receba recomendacoes parecidas">
-    <link rel="stylesheet" href="./css/style.css"
+
 </head>
 
 <body>
@@ -13,7 +13,7 @@
 
     <nav> 
         <ul>
-            <li><a href="index.html"> Início </a></li>
+            <li><a href="#"> Início </a></li>
             <li><a href="./categoria-de-filmes.html"> Categoria de Filmes </a></li>
             <li><a href="./categoria-de-series.html"> Categoria de Séries </a></li>
 </header>
@@ -22,8 +22,7 @@
 <main>
     <h1> Avalie seus filmes favoritos aqui </h1>
     <p> Temos disponiveis em nosso site filmes e series para voce avaliar, e você também pode escolher um filme para assistir aqui no nosso site. </p>
-    <h2>Lançamentos</h2>
-    <img src="/imgcinema/deadpool.jpeg" alt= "Assista ou avalie aqui" height="270" loading="eager">
+<img src="/imgcinema/deadpool.jpeg" alt= "Assista ou avalie aqui" height="270" loading="eager">
 <h2 class=""></h2>
 
 </main>
