--- a/categoria-de-filmes.html
+++ b/categoria-de-filmes.html
@@ -13,14 +13,33 @@
     <h1 id="titulo">Comédia</h1>
 
     <div id="gradefilmes">
-    <a href="/gente-grande.html">
-    <img src="/imgcinema/gentegrande.jpg" height="230" loading="eager"></a>
-    <img src="/imgcinema/fadadodente.webp" height="230" loading="eager">
+    <a href="/html-filme-comedia/gente-grande.html">
+    <img src="/imgcinema/filme-comedia/gentegrande.jpg" height="230" loading="eager"></a>
+    <a href="/html-filme-comedia/fada-do-dente.html">
+    <img src="/imgcinema/filme-comedia/fadadodente.webp" height="230" loading="eager">
+    <a href="/html-filme-comedia/mascara.html">
+    <img src="/imgcinema/filme-comedia/mascara.jpg" height="230" loading="eager">
+    <a href="html-filme-comedia/mentirinha.html">
+    <img src="/imgcinema/filme-comedia/mentirinha.jpg" height="230" loading="eager">
+    <a href="html-filme-comedia/farofeiros.html">
+    <img src="/imgcinema/filme-comedia/farofeiros.jpg" height="230" loading="eager">
+    <a href="html-filme-comedia/mediterraneo.html">
+    <img src="/imgcinema/filme-comedia/mediterraneo.webp" height="230" loading="eager">
+    <a href="html-filme-comedia/misturados.html">
+    <img src="/imgcinema/filme-comedia/misturados.jpg" height="230" loading="eager">
+    <a href="html-filme-comedia/primeira-vez.html">
+    <img src="/imgcinema/filme-comedia/primeirave.jpg" height="230" loading="eager">
+    
+    <h1> Terror</h1>
+    <img src="/imgcinema/Annabelle.jpg" height="230" loading="eager"></a>
+    <img src="/imgcinema/AtividadeParanormal.jpg" height="230" loading="eager">
     <img src="/imgcinema/mascara.jpg" height="230" loading="eager">
     <img src="/imgcinema/mentirinha.jpg" height="230" loading="eager">
+    <img src="/imgcinema/farofeiros.jpg" height="230" loading="eager">
+    <img src="/imgcinema/mediterraneo.webp" height="230" loading="eager">
+    <img src="/imgcinema/misturados.jpg" height="230" loading="eager">
+    <img src="/imgcinema/primeirave.jpg" height="230" loading="eager">
     
-    <h1> Ação</h1>
-
 
     </div>
 
