--- a/categoria-de-series.html
+++ b/categoria-de-series.html
@@ -7,8 +7,22 @@
     <link rel="stylesheet" href="./css/series.css">
 </head>
 <body>
-    <h1 id="titulo">Comédia</h1>
-    <img src="/imgcinema/MV5BNzVkYWY4NzYtMWFlZi00YzkwLThhZDItZjcxYTU4ZTMzMDZmXkEyXkFqcGdeQXVyODUxOTU0OTg@._V1_.jpg" height="270" loading="eager">
-    <img src="/imgcinema/odeiaochri.jpg" height="270" loading="eager">
+    <h1>Comédia</h1>
+    
+    <a href="/html-serie-comedia/b99.html">
+    <img src="/imgcinema/serie-comedia/B99.jpg" height="230" loading="eager"></a>
+    <a href="/html-serie-comedia/eu-a-patroa.html">
+    <img src="/imgcinema/serie-comedia/Eu,apatroaeascrianças.webp" height="230" loading="eager"></a>
+    <a href="/html-serie-comedia/familia-moderna.html">
+    <img src="/imgcinema/serie-comedia/Modernfamily.webp" height="230" loading="eager"></a>
+    <a href="/html-serie-comedia/office.html">
+    <img src="/imgcinema/serie-comedia/Theoffice.jpg" height="230" loading="eager"></a>
+    <a href="/html-serie-comedia/super-store.html">
+    <img src="/imgcinema/serie-comedia/Superstore.jpg" height="230" loading="eager"></a>
+    <a href="/html-serie-comedia/ted-lasso.html">
+    <img src="/imgcinema/serie-comedia/TedLasso.jpg" height="230" loading="eager"></a>
+    <a href="/html-serie-comedia/todo-mundo-odeio-chris.html">
+    <img src="/imgcinema/serie-comedia/odeiaochri.jpg" height="230" loading="eager"></a>
+   
 </body>
 </html>
