--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
     <h1> Avalie seus filmes favoritos aqui </h1>
     <p> Temos disponiveis em nosso site filmes e series para voce avaliar, e você também pode escolher um filme para assistir aqui no nosso site. </p>
     <h2>Lançamentos</h2>
-    <img src="/imgcinema/filme-comedia/deadpool.jpeg" alt= "Assista ou avalie aqui" height="270" loading="eager">
-    <img src="/imgcinema/filme-comedia/deadpool.jpeg" alt= "Assista ou avalie aqui" height="270" loading="eager">
+    <a href="/html-filme-comedia/deadpool.html">
+    <img src="/imgcinema/filme-comedia/deadpool.jpeg" height="230" loading="eager"></a>
+    <a href="/html-filme-acao/furiosa.html">
+    <img src="/imgcinema/filme-acao/mad.jpeg" height="230" loading="eager"></a>
     <h2 class=""></h2>
 
 </main>
