--- a/html-filme-comedia-romantica/proposta.html
+++ b/html-filme-comedia-romantica/proposta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Como Se Fosse a Primeira Vez</title>
+    <title>A Proposta</title>
     <style>
 body {
     font-family: Arial, sans-serif;
@@ -73,8 +73,8 @@ input[type="submit"]:hover {
 </head>
 
 <body>
-    <h1>Como Se Fosse a Primeira Vez</h1>
-    <img src="/imgcinema/filme-comedia/primeirave.jpg" height="270" loading="eager">
+    <h1>A Proposta</h1>
+    <img src="/imgcinema/filme-comedia-romantica/AProposta.jpg" height="270" loading="eager">
 
 <div class="container">
     <form id="reviewForm">
