--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
     <img src="/imgcinema/filme-1cartaz/deadpool.jpeg" height="230" loading="eager"></a>
     <a href="/html-filme-1cartaz/assim-que-acaba.html">
     <img src="/imgcinema/filme-1cartaz/assim-que-acaba.webp" height="230" loading="eager"></a>
+    <a href="/html-filme-1cartaz/deadpool.html">
+    <img src="/imgcinema/filme-1cartaz/deadpool.jpeg" height="230" loading="eager"></a>
+    <a href="/html-filme-1cartaz/assim-que-acaba.html">
+    <img src="/imgcinema/filme-1cartaz/assim-que-acaba.webp" height="230" loading="eager"></a>
+    <a href="/html-filme-1cartaz/deadpool.html">
+    <img src="/imgcinema/filme-1cartaz/deadpool.jpeg" height="230" loading="eager"></a>
+    <a href="/html-filme-1cartaz/assim-que-acaba.html">
+    <img src="/imgcinema/filme-1cartaz/assim-que-acaba.webp" height="230" loading="eager"></a>
+    <a href="/html-filme-1cartaz/deadpool.html">
+    <img src="/imgcinema/filme-1cartaz/deadpool.jpeg" height="230" loading="eager"></a>
+    <a href="/html-filme-1cartaz/assim-que-acaba.html">
+    <img src="/imgcinema/filme-1cartaz/assim-que-acaba.webp" height="230" loading="eager"></a>
+            
+    
     <h2 class=""></h2>
 
 </main>
