--- a/categoria-de-filmes.html
+++ b/categoria-de-filmes.html
@@ -19,17 +19,17 @@
     <h1 id="titulo">Comédia</h1>
 
     <div id="gradefilmes">
-    <a href="/html-filme-comedia/gente-grande.html" target="_blank">
+    <a href="./html-filme-comedia/gente-grande.html" target="_blank">
     <img src="imgcinema/filme-comedia/gentegrande.jpg" height="330" loading="eager"></a>
-    <a href="/html-filme-comedia/fada-do-dente.html" target="_blank">
+    <a href="./html-filme-comedia/fada-do-dente.html" target="_blank">
     <img src="imgcinema/filme-comedia/fadadodente.webp" height="330" loading="eager"></a>
-    <a href="/html-filme-comedia/mascara.html" target="_blank">
+    <a href="./html-filme-comedia/mascara.html" target="_blank">
     <img src="imgcinema/filme-comedia/mascara.jpg" height="330" loading="eager"></a>
-    <a href="html-filme-comedia/mentirinha.html" target="_blank">
+    <a href="./html-filme-comedia/mentirinha.html" target="_blank">
     <img src="imgcinema/filme-comedia/mentirinha.jpg" height="330" loading="eager"></a>
-    <a href="html-filme-comedia/farofeiros.html" target="_blank">
+    <a href="./html-filme-comedia/farofeiros.html" target="_blank">
     <img src="imgcinema/filme-comedia/farofeiros.jpg" height="330" loading="eager"></a>
-    <a href="html-filme-comedia/mediterraneo.html" target="_blank">
+    <a href="./html-filme-comedia/mediterraneo.html" target="_blank">
     <img src="imgcinema/filme-comedia/mediterraneo.webp" height="330" loading="eager"></a>
     <a href="html-filme-comedia/misturados.html" target="_blank">
     <img src="imgcinema/filme-comedia/misturados.jpg" height="330" loading="eager"></a>
