--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p id="description">Prepare a pipoca, ajuste a poltrona e embarque nessa jornada conosco. O show está apenas começando!</p>
     
     <h2>Em Cartaz</h2>
-    <a href="/html-filme-1cartaz/deadpool.html">
+    <a href="./html-filme-1cartaz/deadpool.html">
     <img src="imgcinema/filme-1cartaz/deadpool.jpeg" height="330" loading="eager"></a>
     <a href="/html-filme-1cartaz/assim-que-acaba.html">
     <img src="imgcinema/filme-1cartaz/assim-que-acaba.webp" height="330" loading="eager"></a>
