--- a/categoria-de-filmes.html
+++ b/categoria-de-filmes.html
@@ -20,7 +20,7 @@
 
     <div id="gradefilmes">
     <a href="./html-filme-comedia/gente-grande.html" target="_blank">
-    <img src="imgcinema/filme-comedia/gentegrande.jpg" height="330" loading="eager"></a>
+    <img src="imgcinema/filme-comedia/gentegrande.jpg" height="330" loading="eager" class="imagem-zoom"></a>
     <a href="./html-filme-comedia/fada-do-dente.html" target="_blank">
     <img src="imgcinema/filme-comedia/fadadodente.webp" height="310" loading="eager"></a>
     <a href="./html-filme-comedia/mascara.html" target="_blank">
