--- a/html-filme-1cartaz/bad-boys.html
+++ b/html-filme-1cartaz/bad-boys.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Bad Boys </h1>
-    <img src="../imgcinema/filme-1cartaz/badboys.webp" height="270" loading="eager">
+    <img src="imgcinema/filme-1cartaz/badboys.webp" height="270" loading="eager">
 
 <div class="container">
     <form id="reviewForm">
