--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie</title>
     <meta name="description" content="Avalie seus filmes aqui e receba recomendacoes parecidas">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <header>
         <a href="index.html"> Início </a>
         <a href="./categoria-de-filmes.html"> Categoria de Filmes </a>
@@ -28,19 +28,19 @@
     <h2>Em Cartaz</h2>
     <a href="./html-filme-1cartaz/deadpool.html" target="_blank">
     <img src="imgcinema/filme-1cartaz/deadpool.jpeg" height="330" loading="eager"></a>
-    <a href="/html-filme-1cartaz/assim-que-acaba.html" target="_blank">
+    <a href="./html-filme-1cartaz/assim-que-acaba.html" target="_blank">
     <img src="imgcinema/filme-1cartaz/assim-que-acaba.webp" height="330" loading="eager"></a>
-    <a href="/html-filme-1cartaz/alien.html" target="_blank">
+    <a href="./html-filme-1cartaz/alien.html" target="_blank">
     <img src="imgcinema/filme-1cartaz/alien.webp" height="330" loading="eager"></a>
-    <a href="/html-filme-1cartaz/bad-boys.html" target="_blank">
+    <a href="./html-filme-1cartaz/bad-boys.html" target="_blank">
     <img src="imgcinema/filme-1cartaz/badboys.webp" height="330" loading="eager"></a>
-    <a href="/html-filme-1cartaz/favorito.html" target="_blank">
+    <a href="./html-filme-1cartaz/favorito.html" target="_blank">
     <img src="imgcinema/filme-1cartaz/favorito.webp" height="330" loading="eager"></a>
-    <a href="/html-filme-1cartaz/garfield.html" target="_blank">
+    <a href="./html-filme-1cartaz/garfield.html" target="_blank">
     <img src="imgcinema/filme-1cartaz/garfield.webp" height="330" loading="eager"></a>
-    <a href="/html-filme-1cartaz/silencioso.html" target="_blank">
+    <a href="./html-filme-1cartaz/silencioso.html" target="_blank">
     <img src="imgcinema/filme-1cartaz/silencioso.jpg" height="330" loading="eager"></a>
-    <a href="/html-filme-1cartaz/twister.html" target="_blank">
+    <a href="./html-filme-1cartaz/twister.html" target="_blank">
     <img src="imgcinema/filme-1cartaz/twister.webp" height="330" loading="eager"></a>
            
     
