--- a/html-filme-1cartaz/alien.html
+++ b/html-filme-1cartaz/alien.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Alien: Romulus </h1>
-    <img src="../imgcinema/filme-1cartaz/alien.webp" height="270" loading="eager">
+    <img src="imgcinema/filme-1cartaz/alien.webp" height="270" loading="eager">
 
 <div class="container">
     <form id="reviewForm">
