--- a/html-filme-1cartaz/assim-que-acaba.html
+++ b/html-filme-1cartaz/assim-que-acaba.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>É Assim que Acaba </h1>
-    <img src="../imgcinema/filme-1cartaz/assim-que-acaba.webp" height="270" loading="eager">
+    <img src="imgcinema/filme-1cartaz/assim-que-acaba.webp" height="270" loading="eager">
 
 <div class="container">
     <form id="reviewForm">
