--- a/html-filme-1cartaz/deadpool.html
+++ b/html-filme-1cartaz/deadpool.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Deadpool </h1>
-    <img src="../imgcinema/filme-1cartaz/deadpool.jpeg" height="270" loading="eager">
+    <img src="imgcinema/filme-1cartaz/deadpool.jpeg" height="270" loading="eager">
 
 <div class="container">
     <form id="reviewForm">
