--- a/html-filme-1cartaz/favorito.html
+++ b/html-filme-1cartaz/favorito.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Meu Malvado Favorito 4 </h1>
-    <img src="../imgcinema/filme-1cartaz/favorito.webp" height="270" loading="eager">
+    <img src="imgcinema/filme-1cartaz/favorito.webp" height="270" loading="eager">
 
 <div class="container">
     <form id="reviewForm">
