--- a/html-filme-1cartaz/garfield.html
+++ b/html-filme-1cartaz/garfield.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Garfield: Fora de Casa</h1>
-    <img src="../imgcinema/filme-1cartaz/garfield.webp" height="270" loading="eager">
+    <img src="imgcinema/filme-1cartaz/garfield.webp" height="270" loading="eager">
 
 <div class="container">
     <form id="reviewForm">
