--- a/html-filme-1cartaz/silencioso.html
+++ b/html-filme-1cartaz/silencioso.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Um Lugar Silencioso: Dia 1 </h1>
-    <img src="../imgcinema/filme-1cartaz/silencioso.jpg" height="270" loading="eager">
+    <img src="imgcinema/filme-1cartaz/silencioso.jpg" height="270" loading="eager">
 
 <div class="container">
     <form id="reviewForm">
