--- a/html-filme-1cartaz/silencioso.html
+++ b/html-filme-1cartaz/silencioso.html
@@ -4,13 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Um Lugar Silencioso: Dia 1</title>
+    <style>
+        body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+}
+
+label {
+    font-weight: bold;
+    display: block;
+    margin: 10px 0 5px;
+}
+input[type="text"], textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.star-rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    margin-bottom: 10px;
+}
+.star-rating input {
+    display: none;
+}
+.star-rating label {
+    font-size: 30px;
+    color: #ccc;
+    cursor: pointer;
+    transition: color 0.2s;
+}
+.star-rating input:checked ~ label {
+    color: #f5b301;
+}
+.star-rating label:hover,
+.star-rating label:hover ~ label {
+    color: #f5b301;
+}
+input[type="submit"] {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+input[type="submit"]:hover {
+    background-color: #555;
+}
+.review {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px #ccc;
+    margin-bottom: 20px;
+}
+.review h3 {
+    margin: 0;
+}
+.review .stars {
+    color: #f5b301;
+}
+
+    </style>
     <link rel="stylesheet" href="/css/avaliacao.css">
 </head>
 
 <body>
     <h1>Um Lugar Silencioso: Dia 1 </h1>
-    <img src="imgcinema/filme-1cartaz/silencioso.jpg" height="270" loading="eager">
+    <img src="../imgcinema/filme-1cartaz/silencioso.jpg" height="270" loading="eager">
 
 <div class="container">
     <form id="reviewForm">
