--- a/html-filme-romance/como-era-antes-voce.html
+++ b/html-filme-romance/como-era-antes-voce.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
     <title>Como Eu Era Antes de Você</title>
     <style>
 body {
@@ -74,7 +73,7 @@ input[type="submit"]:hover {
 
 <body>
     <h1>Como Eu Era Antes de Você </h1>
-    <img src="/imgcinema/filme-romance/como-eu-era-antes-de-voc.jpg" height="270" loading="eager">
+    <img src="../imgcinema/filme-romance/como-eu-era-antes-de-voc.jpg" height="270" loading="eager">
 
 <div class="container">
     <form id="reviewForm">
