--- a/html-filme-terror/sorria.html
+++ b/html-filme-terror/sorria.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
     <title>Sorria </title>
     <style>
 body {
@@ -74,7 +73,7 @@ input[type="submit"]:hover {
 
 <body>
     <h1>Sorria </h1>
-    <img src="/imgcinema/filme-terror/Sorria.jpg" height="270" loading="eager">
+    <img src="../imgcinema/filme-terror/Sorria.jpg" height="270" loading="eager">
 
 <div class="container">
     <form id="reviewForm">
