--- a/index.html
+++ b/index.html
@@ -11,7 +11,51 @@
         <a href="./categoria-de-filmes.html"> Categoria de Filmes </a>
         <a href="./categoria-de-series.html"> Categoria de Séries </a>
     </header>
-    
+    <style>
+        header{
+    background: #ebe3da;
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+body{
+    background-color: rgb(255, 254, 253);
+}
+h1{
+    text-align: center;
+    color: darkred
+}
+h2{
+    text-align: center;
+    color: navy;
+}
+header a {
+    text-align: center;
+    font-family: Arial, sans-serif;
+    color: #000000;
+    text-decoration: none;
+    margin: 0 10px;
+}
+header a:hover {
+    text-decoration: underline;
+    color: darkred;
+    text-decoration: underline;
+}
+#description{
+    font-family: Arial, sans-serif;
+    text-align: center;
+}
+
+
+    </style>
 </head>
 
 <body>
