--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
            
     
     <h2 class=""></h2>
+    <h2>Em Breve</h2>
+    <a href="./html-filme-1cartaz/"
+    <img src="imgcinema/filme-1cartaz/coringa.jpg" height="328" loading="eager" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1cartaz/kraven.jpg" height="330" loading="eager" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1cartaz/moana.jpg" height="330" loading="eager" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1cartaz/naofaleomal.jpg" height="328" loading="eager" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1cartaz/gladiador.jpg" height="328" loading="eager" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1cartaz/beetlejuice.avif" height="328" loading="eager" class="imagem-zoom"></a>
 </main>
 <footer>
 
