--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
     
     <h2 class=""></h2>
     <h2>Em Breve</h2>
-    <img src="imgcinema/filme-1cartaz/coringa.jpg" height="328" loading="eager" class="imagem-zoom"></a>
-    <img src="imgcinema/filme-1cartaz/kraven.jpg" height="330" loading="eager" class="imagem-zoom"></a>
-    <img src="imgcinema/filme-1cartaz/moana.jpg" height="330" loading="eager" class="imagem-zoom"></a>
-    <img src="imgcinema/filme-1cartaz/naofaleomal.jpg" height="328" loading="eager" class="imagem-zoom"></a>
-    <img src="imgcinema/filme-1cartaz/gladiador.jpg" height="328" loading="eager" class="imagem-zoom"></a>
-    <img src="imgcinema/filme-1cartaz/beetlejuice.avif" height="328" loading="eager" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1breve/coringa.jpg" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1breve/kraven.jpg" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1breve/moana.jpg" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1breve/gladiador.jpg" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1breve/musafa.jpeg" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1breve/naofaleomal.jpg" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1breve/beetlejuice.avif" class="imagem-zoom"></a>
 
 </main>
 <footer>
