--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <img src="imgcinema/filme-1breve/moana.jpg" class="imagem-zoom"></a>
     <img src="imgcinema/filme-1breve/gladiador.jpg" class="imagem-zoom"></a>
     <img src="imgcinema/filme-1breve/musafa.jpeg" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1breve/beetlejuice.jpg" class="imagem-zoom"></a>
+    <img src="imgcinema/filme-1breve/venom3.webp" class="imagem-zoom"></a>
     <img src="imgcinema/filme-1breve/naofaleomal.jpg" class="imagem-zoom"></a>
-    <img src="imgcinema/filme-1breve/beetlejuice.avif" class="imagem-zoom"></a>
-
 </main>
 <footer>
 
