--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Persin Movies</title>
+    <link rel="icon" href="imgcinema/Pipoca.jpeg">
     <meta name="description" content="Avalie seus filmes aqui e receba recomendacoes parecidas">
    <link rel="stylesheet" href="./css/style.css">
     <header>
@@ -56,6 +57,7 @@
     <img src="imgcinema/filme-1breve/venom3.webp" class="imagem-zoom"></a>
     <img src="imgcinema/filme-1breve/naofaleomal.jpg" class="imagem-zoom"></a>
 </main>
+
 <footer>
 
     
