--- a/login.html
+++ b/login.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="./css/login.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
  </head>
  <body>
     <form class="form_container">
-        <div class="logo_container"></div>
         <div class="title_container">
-          <p class="title">Faça seu Login com sua Conta</p>
+          <p class="title">Faça seu Login</p>
           <span class="subtitle">Começe com nosso site, apenas crie uma conta e aproveite.</span>
         </div>
         <br>
