--- a/categoria-de-filmes.html
+++ b/categoria-de-filmes.html
@@ -11,12 +11,14 @@
 </head>
 <body>
     <header>
-        <a href="index.html"> Início </a>
-        <a href="./categoria-de-filmes.html"> Categoria de Filmes </a>
-        <a href="./categoria-de-series.html"> Categoria de Séries </a>
+        <a href="#" class="logo">Filmes</a>
+    
+        <nav class="navbar">
+            <a href="index.html"> Início </a>
+            <a href="./categoria-de-filmes.html"> Categoria de Filmes </a>
+            <a href="./categoria-de-series.html"> Categoria de Séries </a>    
+        </nav>
     </header>
-
-    <h1>FILMES</h1>
 
     <h2>Comédia</h2>
     <div class="gallery-wrapper">
