--- a/categoria-de-series.html
+++ b/categoria-de-series.html
@@ -12,13 +12,15 @@
 </head>
 <body>
 
-    <header>
-        <a href="index.html"> Início </a>
-        <a href="./categoria-de-filmes.html"> Categoria de Filmes </a>
-        <a href="./categoria-de-series.html"> Categoria de Séries </a>
+        <header>
+        <a href="#" class="logo">Séries</a>
+    
+        <nav class="navbar">
+            <a href="index.html"> Início </a>
+            <a href="./categoria-de-filmes.html"> Categoria de Filmes </a>
+            <a href="./categoria-de-series.html"> Categoria de Séries </a>    
+        </nav>
     </header>
-
-    <h1>SÉRIES</h1>
 
 
     <h2>Comédia</h2>
