--- a/html-filme-1cartaz/filmes-comedia-romantica.html
+++ b/html-filme-1cartaz/filmes-comedia-romantica.html
@@ -11,7 +11,7 @@
 
 <div class="container">
     <!-- Título da seção -->
-    <h2 class="titulo-secao">Filmes de Comédia Romântica</h2>
+    <h2 class="titulo-secao">Filmes deComédia Romântica</h2>
 
     <label for="escolha">Escolha o filme que você quer avaliar:</label>
     <select id="escolha" name="escolha">
@@ -55,11 +55,9 @@
     <div id="reviews"></div>
 </div>
 
-<script>
-    const form = document.getElementById('reviewForm');
-    const reviewsDiv = document.getElementById('reviews');
-    const selectFilme = document.getElementById('escolha');
 
+<script src="../script.js"></script>
+<script>
     const imagensFilmes = {
         "10coisas": "../imgcinema/filme-comedia-romantica/coisas-que-odeio.jpg",
         "beverly": "../imgcinema/filme-comedia-romantica/Beverly-Hills.jpg",
@@ -72,64 +70,6 @@
         "todos-menos": "../imgcinema/filme-comedia-romantica/todosmenosvoce.jpg"
     };
 
-    function salvarAvaliacao(filme, descricao, nota) {
-        const todasAvaliacoes = JSON.parse(localStorage.getItem('avaliacoes')) || {};
-        if (!todasAvaliacoes[filme]) todasAvaliacoes[filme] = [];
-        todasAvaliacoes[filme].push({ descricao, nota });
-        localStorage.setItem('avaliacoes', JSON.stringify(todasAvaliacoes));
-    }
-
-    function mostrarAvaliacoes(filme) {
-        reviewsDiv.innerHTML = '';
-        const todasAvaliacoes = JSON.parse(localStorage.getItem('avaliacoes')) || {};
-        const avaliacoes = todasAvaliacoes[filme] || [];
-        const nomeFilme = selectFilme.options[selectFilme.selectedIndex].text;
-
-        avaliacoes.forEach(avaliacao => {
-            const review = document.createElement('div');
-            review.className = 'review';
-            review.innerHTML = `
-                <h3 style="color: #D4AF37;">${nomeFilme}</h3>
-                <p>${avaliacao.descricao}</p>
-                <p class="stars">${'★'.repeat(avaliacao.nota)}${'☆'.repeat(5 - avaliacao.nota)}</p>
-            `;
-            reviewsDiv.appendChild(review);
-        });
-    }
-
-    function atualizarImagem(filme) {
-        const img = document.getElementById('posterFilme');
-        if (imagensFilmes[filme]) {
-            img.src = imagensFilmes[filme];
-            img.style.display = 'block';
-        } else {
-            img.style.display = 'none';
-            img.src = '';
-        }
-    }
-
-    form.addEventListener('submit', function(e) {
-        e.preventDefault();
-
-        const filmeSelecionado = selectFilme.value;
-        const descricao = document.getElementById('movieDescription').value;
-        const nota = document.querySelector('input[name="rating"]:checked')?.value;
-
-        if (!filmeSelecionado || !nota) {
-            alert("Preencha todos os campos.");
-            return;
-        }
-
-        salvarAvaliacao(filmeSelecionado, descricao, nota);
-        form.reset();
-        mostrarAvaliacoes(filmeSelecionado);
-    });
-
-    selectFilme.addEventListener('change', function() {
-        const filmeSelecionado = this.value;
-        mostrarAvaliacoes(filmeSelecionado);
-        atualizarImagem(filmeSelecionado);
-    });
 </script>
 
 </body>
