--- a/categoria-de-filmes.html
+++ b/categoria-de-filmes.html
@@ -20,110 +20,29 @@
         </nav>
     </header>
 
-    <h2>Comédia</h2>
-    <div class="gallery-wrapper">
-        <div class="gallery-container" id="gallery">
-            <a href="./html-filme-1cartaz/filmes-cartaz.html">
-                <img src="./imgcinema/filme-1cartaz/alien.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/assim-que-acaba.html">
-                <img src="./imgcinema/filme-1cartaz/assim-que-acaba.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/bad-boys.html">
-                <img src="./imgcinema/filme-1cartaz/badboys.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/deadpool.html">
-                <img src="./imgcinema/filme-1cartaz/deadpool.jpeg" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/favorito.html">
-                <img src="./imgcinema/filme-1cartaz/favorito.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/garfield.html">
-                <img src="./imgcinema/filme-1cartaz/garfield.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/silencioso.html">
-                <img src="./imgcinema/filme-1cartaz/silencioso.jpg" alt="Imagem 1">
-            </a>
-        </div>
-    </div>
-
     <h2> Terror</h2>
     <div class="gallery-wrapper">
         <div class="gallery-container" id="gallery">
-            <a href="./html-filme-1cartaz/alien.html">
-                <img src="./imgcinema/filme-1cartaz/alien.webp" alt="Imagem 1">
+            <a href="./html-filme-terror/annabelle.html">
+                <img src="./imgcinema/filme-terror/Annabelle.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/assim-que-acaba.html">
-                <img src="./imgcinema/filme-1cartaz/assim-que-acaba.webp" alt="Imagem 1">
+            <a href="./html-filme-terror/atividade-paranormal.html">
+                <img src="./imgcinema/filme-terror/AtividadeParanormal.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/bad-boys.html">
-                <img src="./imgcinema/filme-1cartaz/badboys.webp" alt="Imagem 1">
+            <a href="./html-filme-terror/fratura.html">
+                <img src="./imgcinema/filme-terror/Fratura.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/deadpool.html">
-                <img src="./imgcinema/filme-1cartaz/deadpool.jpeg" alt="Imagem 1">
+            <a href="./html-filme-terror/hereditario.html">
+                <img src="./imgcinema/filme-terror/hereditário.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/favorito.html">
-                <img src="./imgcinema/filme-1cartaz/favorito.webp" alt="Imagem 1">
+            <a href="./html-filme-terror/invocacao-do-mal.html">
+                <img src="./imgcinema/filme-terror/InvocaçãodoMal.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/garfield.html">
-                <img src="./imgcinema/filme-1cartaz/garfield.webp" alt="Imagem 1">
+            <a href="./html-filme-terror/jogos-mortais.html">
+                <img src="./imgcinema/filme-terror/jogosmortais.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/silencioso.html">
-                <img src="./imgcinema/filme-1cartaz/silencioso.jpg" alt="Imagem 1">
-            </a>
-        </div>
-    </div>
-
-    <h2>Ação</h2>
-    <div class="gallery-wrapper">
-        <div class="gallery-container" id="gallery">
-            <a href="./html-filme-1cartaz/alien.html">
-                <img src="./imgcinema/filme-1cartaz/alien.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/assim-que-acaba.html">
-                <img src="./imgcinema/filme-1cartaz/assim-que-acaba.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/bad-boys.html">
-                <img src="./imgcinema/filme-1cartaz/badboys.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/deadpool.html">
-                <img src="./imgcinema/filme-1cartaz/deadpool.jpeg" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/favorito.html">
-                <img src="./imgcinema/filme-1cartaz/favorito.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/garfield.html">
-                <img src="./imgcinema/filme-1cartaz/garfield.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/silencioso.html">
-                <img src="./imgcinema/filme-1cartaz/silencioso.jpg" alt="Imagem 1">
-            </a>
-        </div>
-    </div>
-        
-    <h2>Comédia Romântica</h2>
-    <div class="gallery-wrapper">
-        <div class="gallery-container" id="gallery">
-            <a href="./html-filme-1cartaz/alien.html">
-                <img src="./imgcinema/filme-1cartaz/alien.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/assim-que-acaba.html">
-                <img src="./imgcinema/filme-1cartaz/assim-que-acaba.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/bad-boys.html">
-                <img src="./imgcinema/filme-1cartaz/badboys.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/deadpool.html">
-                <img src="./imgcinema/filme-1cartaz/deadpool.jpeg" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/favorito.html">
-                <img src="./imgcinema/filme-1cartaz/favorito.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/garfield.html">
-                <img src="./imgcinema/filme-1cartaz/garfield.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/silencioso.html">
-                <img src="./imgcinema/filme-1cartaz/silencioso.jpg" alt="Imagem 1">
+            <a href="./html-filme-terror/panico.html">
+                <img src="./imgcinema/filme-terror/panico.jpg" alt="Imagem 1">
             </a>
         </div>
     </div>
@@ -131,26 +50,26 @@
     <h2>Romance </h2>
     <div class="gallery-wrapper">
         <div class="gallery-container" id="gallery">
-            <a href="./html-filme-1cartaz/alien.html">
-                <img src="./imgcinema/filme-1cartaz/alien.webp" alt="Imagem 1">
+            <a href="./html-filme-romance/cinco-passos.html">
+                <img src="./imgcinema/filme-romance/A-Cinco-Passos-de-Você.png" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/assim-que-acaba.html">
-                <img src="./imgcinema/filme-1cartaz/assim-que-acaba.webp" alt="Imagem 1">
+            <a href="./html-filme-romance/como-era-antes-voce.html">
+                <img src="./imgcinema/filme-romance/como-eu-era-antes-de-voc.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/bad-boys.html">
-                <img src="./imgcinema/filme-1cartaz/badboys.webp" alt="Imagem 1">
+            <a href="./html-filme-romance/crepusculo.html">
+                <img src="./imgcinema/filme-romance/Crepusculo.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/deadpool.html">
-                <img src="./imgcinema/filme-1cartaz/deadpool.jpeg" alt="Imagem 1">
+            <a href="./html-filme-romance/culpa-das-estrelas.html">
+                <img src="./imgcinema/filme-romance/A-culpa-e-das-estrelas.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/favorito.html">
-                <img src="./imgcinema/filme-1cartaz/favorito.webp" alt="Imagem 1">
+            <a href="./html-filme-romance/diario-uma-paixao.html">
+                <img src="./imgcinema/filme-romance/diariodeumapaixão.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/garfield.html">
-                <img src="./imgcinema/filme-1cartaz/garfield.webp" alt="Imagem 1">
+            <a href="./html-filme-romance/enquanto-voce-dormia.html">
+                <img src="./imgcinema/filme-romance/enquantovcdormia.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/silencioso.html">
-                <img src="./imgcinema/filme-1cartaz/silencioso.jpg" alt="Imagem 1">
+            <a href="./html-filme-romance/minha-culpa.html">
+                <img src="./imgcinema/filme-romance/Minha Culpa.jpg" alt="Imagem 1">
             </a>
         </div>
     </div>
