--- a/categoria-de-series.html
+++ b/categoria-de-series.html
@@ -26,134 +26,53 @@
     <h2>Comédia</h2>
     <div class="gallery-wrapper">
         <div class="gallery-container" id="gallery">
-            <a href="./html-filme-1cartaz/alien.html">
-                <img src="./imgcinema/filme-1cartaz/alien.webp" alt="Imagem 1">
+            <a href="./html-serie-comedia/b99.html">
+                <img src="./imgcinema/serie-comedia/B99.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/assim-que-acaba.html">
-                <img src="./imgcinema/filme-1cartaz/assim-que-acaba.webp" alt="Imagem 1">
+            <a href="./html-serie-comedia/eu-a-patroa.html">
+                <img src="./imgcinema/serie-comedia/Eu,apatroaeascrianças.webp" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/bad-boys.html">
-                <img src="./imgcinema/filme-1cartaz/badboys.webp" alt="Imagem 1">
+            <a href="./html-serie-comedia/friends.html">
+                <img src="./imgcinema/serie-comedia/friends.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/deadpool.html">
-                <img src="./imgcinema/filme-1cartaz/deadpool.jpeg" alt="Imagem 1">
+            <a href="./html-serie-comedia/familia-moderna.html">
+                <img src="./imgcinema/serie-comedia/Modernfamily.webp" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/favorito.html">
-                <img src="./imgcinema/filme-1cartaz/favorito.webp" alt="Imagem 1">
+            <a href="./html-serie-comedia/office.html">
+                <img src="./imgcinema/serie-comedia/Theoffice.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/garfield.html">
-                <img src="./imgcinema/filme-1cartaz/garfield.webp" alt="Imagem 1">
+            <a href="./html-serie-comedia/ted-lasso.html">
+                <img src="./imgcinema/serie-comedia/TedLasso.jpg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/silencioso.html">
-                <img src="./imgcinema/filme-1cartaz/silencioso.jpg" alt="Imagem 1">
+            <a href="./html-serie-comedia/super-store.html">
+                <img src="./imgcinema/serie-comedia/Superstore.jpg" alt="Imagem 1">
             </a>
         </div>
     </div>   
-    
-    <h2> Terror</h2>
-    <div class="gallery-wrapper">
-        <div class="gallery-container" id="gallery">
-            <a href="./html-filme-1cartaz/alien.html">
-                <img src="./imgcinema/filme-1cartaz/alien.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/assim-que-acaba.html">
-                <img src="./imgcinema/filme-1cartaz/assim-que-acaba.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/bad-boys.html">
-                <img src="./imgcinema/filme-1cartaz/badboys.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/deadpool.html">
-                <img src="./imgcinema/filme-1cartaz/deadpool.jpeg" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/favorito.html">
-                <img src="./imgcinema/filme-1cartaz/favorito.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/garfield.html">
-                <img src="./imgcinema/filme-1cartaz/garfield.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/silencioso.html">
-                <img src="./imgcinema/filme-1cartaz/silencioso.jpg" alt="Imagem 1">
-            </a>
-        </div>
-    </div>
 
     <h2>Ação</h2>
     <div class="gallery-wrapper">
         <div class="gallery-container" id="gallery">
-            <a href="./html-filme-1cartaz/alien.html">
-                <img src="./imgcinema/filme-1cartaz/alien.webp" alt="Imagem 1">
+            <a href="./html-serie-acao/caes-de-caca.html">
+                <img src="./imgcinema/serie-acao/caesecaca.webp" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/assim-que-acaba.html">
-                <img src="./imgcinema/filme-1cartaz/assim-que-acaba.webp" alt="Imagem 1">
+            <a href="./html-serie-acao/casa-de-papel.html">
+                <img src="./imgcinema/serie-acao/lacasadepapel.jpeg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/bad-boys.html">
-                <img src="./imgcinema/filme-1cartaz/badboys.webp" alt="Imagem 1">
+            <a href="./html-serie-acao/cobra-kai.html">
+                <img src="./imgcinema/serie-acao/cobrakai.jpeg" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/deadpool.html">
-                <img src="./imgcinema/filme-1cartaz/deadpool.jpeg" alt="Imagem 1">
+            <a href="./html-serie-acao/daredevil.html">
+                <img src="./imgcinema/serie-acao/daredevil.webp" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/favorito.html">
-                <img src="./imgcinema/filme-1cartaz/favorito.webp" alt="Imagem 1">
+            <a href="./html-serie-acao/justiceiro.html">
+                <img src="./imgcinema/serie-acao/justiceiro.webp" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/garfield.html">
-                <img src="./imgcinema/filme-1cartaz/garfield.webp" alt="Imagem 1">
+            <a href="./html-serie-acao/reacher.html">
+                <img src="./imgcinema/serie-acao/reacher.webp" alt="Imagem 1">
             </a>
-            <a href="./html-filme-1cartaz/silencioso.html">
-                <img src="./imgcinema/filme-1cartaz/silencioso.jpg" alt="Imagem 1">
-            </a>
-        </div>
-    </div>
-        
-    <h2>Ficção Científica</h2>
-    <div class="gallery-wrapper">
-        <div class="gallery-container" id="gallery">
-            <a href="./html-filme-1cartaz/alien.html">
-                <img src="./imgcinema/filme-1cartaz/alien.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/assim-que-acaba.html">
-                <img src="./imgcinema/filme-1cartaz/assim-que-acaba.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/bad-boys.html">
-                <img src="./imgcinema/filme-1cartaz/badboys.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/deadpool.html">
-                <img src="./imgcinema/filme-1cartaz/deadpool.jpeg" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/favorito.html">
-                <img src="./imgcinema/filme-1cartaz/favorito.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/garfield.html">
-                <img src="./imgcinema/filme-1cartaz/garfield.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/silencioso.html">
-                <img src="./imgcinema/filme-1cartaz/silencioso.jpg" alt="Imagem 1">
-            </a>
-        </div>
-    </div>
-
-    <h2>Romance </h2>
-        <div class="gallery-wrapper">
-        <div class="gallery-container" id="gallery">
-            <a href="./html-filme-1cartaz/alien.html">
-                <img src="./imgcinema/filme-1cartaz/alien.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/assim-que-acaba.html">
-                <img src="./imgcinema/filme-1cartaz/assim-que-acaba.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/bad-boys.html">
-                <img src="./imgcinema/filme-1cartaz/badboys.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/deadpool.html">
-                <img src="./imgcinema/filme-1cartaz/deadpool.jpeg" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/favorito.html">
-                <img src="./imgcinema/filme-1cartaz/favorito.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/garfield.html">
-                <img src="./imgcinema/filme-1cartaz/garfield.webp" alt="Imagem 1">
-            </a>
-            <a href="./html-filme-1cartaz/silencioso.html">
-                <img src="./imgcinema/filme-1cartaz/silencioso.jpg" alt="Imagem 1">
+            <a href="./html-serie-acao/the-boys.html">
+                <img src="./imgcinema/serie-acao/theboys.webp" alt="Imagem 1">
             </a>
         </div>
     </div>
